# genprop

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
database/migrations/: env.py
database/migrations/versions/: 001_layer1_tables.py
docs/: Regrid Data Dictionary - All Product Schemas.xlsx
services/ingestion-api/: Makefile  PHASE6_SUMMARY.md  README.md  config.py  exceptions.py  main.py  middleware.py  pyproject.toml
services/ingestion-api/models/: __init__.py  schemas.py
services/ingestion-api/routers/: __init__.py  csv_ingest.py  gdb_ingest.py  status.py
services/ingestion-api/services/: __init__.py  background_utils.py  batch_tracker.py  csv_processor.py  gdb_processor.py  logging_utils.py
services/ingestion-api/tests/: README.md  __init__.py  conftest.py  test_csv_ingest.py  test_gdb_ingest.py  test_gdb_processor.py  test_integration.py  test_status.py
services/ingestion-api/tests/fixtures/: create_test_gdb.py  sample_parcel.csv  sample_retr.csv
services/ingestion-api/tests/fixtures/test_parcels.gdb/: a00000001.gdbtable  a00000003.gdbtable  a00000004.gdbtable  a00000006.gdbtable  a00000009.gdbtable  a00000009.gdbtablx  a00000009.spx
services/shared/: README.md  pyproject.toml
services/shared/shared/: __init__.py  config.py  database.py  hash_utils.py  models.py  rabbitmq.py  wisconsin_normalizer.py
services/shared/tests/: test_config.py  test_database.py  test_models.py  test_rabbitmq.py
specs/: LAYER1_SPEC.md  PROJECT_STRUCTURE.md  raw_storage_implementation.md
