[tool.poetry]
name = "ingestion-api"
version = "0.1.0"
description = "FastAPI service for GDB and CSV file ingestion"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
python-multipart = "^0.0.6"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"

# GDB processing
fiona = "^1.9.5"
geopandas = "^0.14.2"
shapely = "^2.0.2"
pyproj = "^3.6.1"

# CSV processing
pandas = "^2.2.0"
chardet = "^5.2.0"

# Database
asyncpg = "^0.29.0"

# Message queue
pika = "^1.3.2"

# File handling
aiofiles = "^23.2.1"

# Utilities
python-dateutil = "^2.8.2"

# Shared package (local)
shared = {path = "../shared", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"
ruff = "^0.1.9"
mypy = "^1.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
