[tool.poetry]
name = "shared"
version = "0.1.0"
description = "Shared utilities for Wisconsin Real Estate services"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "shared"}]

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
asyncpg = "^0.29.0"
pika = "^1.3.2"
python-dateutil = "^2.8.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
ruff = "^0.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"